--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,13 @@
             android:text="test3"
             android:onClick="test3"
             />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="test4"
+            android:onClick="test4"
+            />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/view"
@@ -38,12 +45,18 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         >
+        <LinearLayout
+            android:id="@+id/drawer"
+            android:layout_width="200px"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="#ffff00"
+            >drawer</LinearLayout>
         <ImageView
-            android:id="@+id/img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/b1"
-            />
+                android:id="@+id/img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/b1"
+                />
     </LinearLayout>
-
 </LinearLayout>
